--- a/views/editBlog.ejs
+++ b/views/editBlog.ejs
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="form-content">
             <h1>Редактировать блог</h1>
-            <form action="/api/edit-blog" method="POST" class="form" enctype="multipart/form-data">
+            <form action="/api/edit-blog/<%=blogs._id%>" method="POST" class="form" enctype="multipart/form-data">
                 <input type="hidden" value="<%=blogs._id%>" name="id">
                 <input type="hidden" value="<%=blogs.author%>" name="author_id">
                 <input type="text" value="<%=blogs.title%>" name="title" placeholder="Введите заголовок блога">
