--- a/public/style/pages/my-blogs.css
+++ b/public/style/pages/my-blogs.css
@@ -108,10 +108,17 @@
     line-height: 46px;
     text-align: left;
     color: #000;
+    cursor: pointer;
+    padding: 2px 53px 0px 14px;
 }
 
 .edit-or-delete a:last-child{
     color: #FF0000;
+}
+
+.edit-or-delete a:hover{
+    background-color: rgba(0, 0, 0, .2);
+    transition: .4s;
 }
 
 .active{
@@ -119,7 +126,6 @@
     flex-direction: column;
     background-color: #fff;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-    padding: 2px 53px 0px 14px;
     position: absolute;
     top: 30px;
     right: 0;
