--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -15,11 +15,11 @@
                     <div class="main-review-more">
                         <button class="btn-more" onclick="openMoreDetails()">
                             <i class="fa-solid fa-ellipsis-vertical"></i>
+                            Еще
                         </button>
-                        Еще
                         <div class="edit-or-delete">
-                            <a href="/edit/<%=blog._id%>">Редактировать</a>
-                            <a href="">Удалить</a>
+                            <a onclick="openEditBlog('<%=blog.author._id%>', '<%=blog._id%>')">Редактировать</a>
+                            <a onclick="deleteBlog('<%=blog.author._id%>', '<%=blog._id%>')">Удалить</a>
                         </div>
                     </div>
                 </div>
